Hotfix: Fixed text fields on Assignments pages on Firefox. Changed keyup event to input event to capture clicking of the up/down arrows.

--- a/managr/client/layouts/assignments.css
+++ b/managr/client/layouts/assignments.css
@@ -252,7 +252,10 @@ header {
     border-radius: 6px !important;
     border: 2px solid lightgrey !important;
     width: 100% !important;
-    padding: 1em 1em !important;
+	/* All the important tags are bad practice, but
+	it appears to be the only way to get them to override
+	the default (bootstrap perhaps?) settings of 20px height for inputs. */
+	height: 2em !important;
     margin: 0px !important;
     box-sizing: border-box !important;
     box-shadow: none !important;
